--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,3 +72,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.container {
+  width: 100%;
+  max-width: 1540px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
