--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: #000;
+  font-family: "Roboto", sans-serif;
+  background: #141414;
   color: white;
 }
 
@@ -35,6 +37,8 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --token-56052a4e-e649-4537-b057-b7c4c291bd6e: rgba(64, 64, 64, 0.63);
+    --token-4b1dbd35-a07f-444d-a8bf-58321eef4081: rgb(0, 0, 0);
   }
   .dark {
     --background: 20 14.3% 4.1%;
@@ -61,6 +65,8 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --token-56052a4e-e649-4537-b057-b7c4c291bd6e: rgba(64, 64, 64, 0.63);
+    --token-4b1dbd35-a07f-444d-a8bf-58321eef4081: rgb(0, 0, 0);
   }
 }
 
@@ -78,4 +84,10 @@ body {
   max-width: 1540px;
   padding: 0 20px;
   margin: 0 auto;
+}
+
+.boxShadow {
+  box-shadow: -2px -2px 2px 0px var(--token-56052a4e-e649-4537-b057-b7c4c291bd6e, rgb(255, 255, 255)),
+    2px 2px 2px 0px
+      var(--token-4b1dbd35-a07f-444d-a8bf-58321eef4081, rgba(0, 0, 0, 0.15));
 }
